.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

3.3.6 - Unreleased
------------------

- Block picking a username already in use by a parent PAS to prevent potential
  security issues due to collisions.
  [MatthewWilkes]

- Limit number of matches looked up during live search for speedier replies.
  [witsch]

- Fix folder_listing, folder_summary_view, and folder_tabular_view
  to display the getText of the context.  Since Plone 3.3.2 this was
  not displayed, due to a wrong condition check.
  Fixes http://dev.plone.org/plone/ticket/8190
  Refs http://dev.plone.org/plone/ticket/8463
  [maurits]

- Fix FactoryTool to mangle REQUEST.BASEn correctly. (Merged [36902]).
  [elro]

- Fixed wrong condition and double definition on join_form where
  allowEnterPassword meant you were actually *not* allowed to enter a
  password.  It worked fine but was confusingly stated the wrong way
  around.
  [maurits]

- MembershipTool.setPassword unnecessarily called the role assigner plugins
  through acl_users.doChangeUser. Now use acl_users.userSetPassword directly.
  [vincentfretin]

- "(Requires Javascript)" is now translatable in accessibility-info.pt.
  This closes http://dev.plone.org/plone/ticket/10475
  [vincentfretin]

- Explicitly check that a searchterm was provided before adding it to the
  query string. This closes
  http://dev.plone.org/plone/ticket/9025
  [blueaidan]

- Fixed for state changed message is wroning for pending item. This closes
  http://dev.plone.org/plone/ticket/10245
  [terapyon]

- Altered table of contents javascript so that comments are not displayed.
  [dbfrombrc]

- "Event when" improved for better i18n.  
  This closes http://dev.plone.org/plone/ticket/10196
  [gotcha]

- Nested groups appear again in prefs_group_members. This was broken since